# web-challenge-environment

./: .editorconfig  README.md  pyproject.toml
.github/workflows/: ci.yml
cuda/: Dockerfile
cuda-python/: Dockerfile
cuda-python/cuda-10.1/: Dockerfile
cuda/10.0/: Dockerfile
cuda/10.1/: Dockerfile
python/: Dockerfile  pyproject.toml
