[tool.poetry]
name = "contest_packages"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cupy-cuda100 = "7.0.0"
chainer = "7.0.0"
numpy = "1.16.4"
tensorflow-gpu = "1.13.1"
keras = "2.3.1"
torch = "1.2.0"
torchvision = "0.4.0"
requests = "2.23.0"
timeout_decorator = "0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
