[tool.poetry]
name = "contest_packages"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cupy-cuda101 = "7.0.0"
chainer = "7.0.0"
numpy = "1.16.4"
tensorflow = "2.3.0"
keras = "2.4.3"
Pillow = "7.1.2"
requests = "2.23.0"
timeout_decorator = "0.4.1"
pandas = "1.1.3"
torch = {url = "https://download.pytorch.org/whl/cu101/torch-1.6.0%2Bcu101-cp37-cp37m-linux_x86_64.whl"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
